<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical"
tools:context=".activity_cheat">

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:text="@string/worning"
    android:background="@drawable/falseshape"
    android:textColor="#ffff"
    android:textStyle="bold"
    android:drawableLeft="@drawable/errorwhite_24dp"
    />

<TextView
    android:id="@+id/answer_text_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    tools:text="@string/answer" />

    <Button
        android:id="@+id/show_answer_button"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:background="@drawable/trueshape"
        android:text="@string/showanswer" />


</LinearLayout>