<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1EA"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_qustion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/qshape"
        android:text="@string/qustion"
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_true"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="116dp"
        android:layout_weight="1"
        android:background="@drawable/trueshape"
        android:text="@string/TRUE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_qustion" />

    <Button
        android:id="@+id/bt_next"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/nextshape"
        android:drawableRight="@drawable/next"
        android:text="@string/nextbt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.912"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_false"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/previous"

        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/priv"
        android:drawableLeft="@drawable/previous_24dp"
        android:text="@string/priv"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_true"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/cheating"

        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/priv"
        android:drawableLeft="@drawable/cheatingicon_24dp"
        android:text="@string/cheat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_next" />

    <TextView
        android:id="@+id/showresult"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/trueshape"
        android:fontFamily="@font/gg"
        android:gravity="center"
        android:text="عرض النتيجة "
        android:textColor="#ffff"
        android:textSize="20sp"
        android:textStyle="bold"

        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheating"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_false"
        android:layout_width="125dp"
        android:layout_height="48dp"
        android:layout_marginTop="116dp"
        android:layout_weight="1"
        android:background="@drawable/falseshape"
        android:text="@string/FALSE"

        android:textColor="#ffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toEndOf="@+id/bt_true"
        app:layout_constraintTop_toBottomOf="@+id/tv_qustion" /><![CDATA[













    app:layout_constraintTop_toBottomOf="@+id/previous" />








]]>
</androidx.constraintlayout.widget.ConstraintLayout>